# egent

./: .example_agent_history  .gitignore  egent.bat  pyproject.toml  readme.md  start.bat
.agents/skills/build-workflow/: SKILL.md
.agents/skills/example-greet/: SKILL.md
.agents/skills/example-greet/scripts/: greet.py
.cursor/rules/: no-project-from-import.mdc
examples/: __init__.py  _bootstrap.py  _common.py  conversation_printer.py  example_agent.py  example_workflow_coding.py  example_workflow_develop.py  example_workflow_review.py  example_workflow_todo.py  git_tools.py  shell_tools.py  studio.py  work_order.py  workflow.py
src/egent/: __init__.py  _constants.py  _line_position.py  agent.py  conversation.py  ephemeral_dirs.py  limits.py  model_settings.py  tool.py
src/egent/builtin_tools/: __init__.py  command_utils.py  env_tools.py  file_system_tools.py  git_tools.py  memory_tools.py  path_validator.py  shell_tools.py  skill_tools.py  test_tools.py  web_search_tools.py
src/egent/builtin_tools/outline_tools/: __init__.py  _base.py  _cs.py  _gd.py  _md.py  _py.py
tests/: test_agent.py  test_conversation.py  test_ephemeral_dirs.py  test_example_workflow_develop.py  test_example_workflow_todo.py  test_file_edit_tools.py  test_file_read_tools.py  test_git_tools.py  test_memory_tools.py  test_model_settings.py  test_path_validator.py  test_pylint.py  test_shell_tools.py  test_skill_tools.py  test_test_tools.py  test_tool.py  test_web_search_tools.py  test_work_order.py
