[project]
name = "egent"
version = "0.1.40"
description = "Chat Completions 多轮对话与工具调用封装"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=6.0",
    "httpx>=0.27",
    "openai>=1.68.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pydantic>=2.0",
    "pylint>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/egent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
extend-select = ["TID"]
ignore = ["PLR2004"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pylint.main]
source-roots = ["src", "examples", "."]

[tool.pylint."messages control"]
disable = ["consider-using-from-import"]

[tool.pylint.format]
max-line-length = 160
